--- a/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
+++ b/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
@@ -77,7 +77,7 @@
               <div data-cy="offerChar" class="flex flex-row w-full items-start">
                 @if(canBeDisabledChars.includes(ch.id)){
                   <label class="inline-flex items-center cursor-pointer w-fit justify-start items-start my-4 mr-2">
-                    <input type="checkbox" (change)="onToggleChange($event, ch.name)" class="sr-only peer">
+                    <input type="checkbox" [checked]="!disabledCharacteristics.includes(ch.id)" (change)="onToggleChange($event, ch.name)" class="sr-only peer">
                     <div class="relative w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600 dark:peer-checked:bg-blue-600"></div>
                   </label>
                 }
